force-app/main/default/objects/Lien__c/Lien__c.object-meta.xml
<CustomObject>
    <description>Connects Loan Financial Accounts with specific Collateral records</description>
    <label>Lien</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Lien Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Liens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>