force-app/main/default/objects/Lien__c/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authority</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recorded Liens</relationshipLabel>
    <relationshipName>Recorded_Liens</relationshipName>
    <type>Lookup</type>
</CustomField>