force-app/main/default/objects/Lien__c/fields/Collateral_Name__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Name__c</fullName>
    <formula>Collateral__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collateral Name</label>
    <type>Text</type>
</CustomField>