force-app/main/default/objects/Lien__c/fields/Liable__c.field-meta.xml
<CustomField>
    <fullName>Liable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liable</label>
    <type>Checkbox</type>
</CustomField>