force-app/main/default/objects/Lien__c/fields/Maintained__c.field-meta.xml
<CustomField>
    <fullName>Maintained__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Maintained</label>
    <type>Date</type>
</CustomField>