force-app/main/default/objects/Lien__c/fields/Released__c.field-meta.xml
<CustomField>
    <fullName>Released__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Released</label>
    <type>Date</type>
</CustomField>