force-app/main/default/objects/Lien__c/fields/Source_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_System_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source System ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>