force-app/main/default/objects/Lien__c/fields/SW_Lien_ID__c.field-meta.xml
<CustomField>
    <fullName>SW_Lien_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SW Lien ID</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>