force-app/main/default/objects/Lien__c/fields/SW_Lien_Position__c.field-meta.xml
<CustomField>
    <fullName>SW_Lien_Position__c</fullName>
    <label>Lien Position</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>