force-app/main/default/objects/Lien__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FRST</fullName>
                <label>First</label>
            </value>
            <value>
                <fullName>SCND</fullName>
                <label>Second</label>
            </value>
            <value>
                <fullName>UCC</fullName>
            </value>
            <value>
                <fullName>OTHR</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>MECH</fullName>
                <label>Mechanic&apos;s Lien</label>
            </value>
            <value>
                <fullName>SWR</fullName>
                <label>Sewer Lien</label>
            </value>
            <value>
                <fullName>TAX</fullName>
                <label>Tax Lien</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>